
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int szBaseName ;
typedef int PPS ;
typedef int * LPVOID ;
typedef int LPCSTR ;
typedef int DWORD ;


 int MAX_PATH ;
 int _stricmp (char*,int ) ;
 int free (int **) ;
 scalar_t__ malloc (int) ;
 scalar_t__ psEnumDeviceDrivers (int ,int **,int,int*) ;
 scalar_t__ psGetDeviceDriverBaseName (int ,int *,char*,int) ;

LPVOID
psGetImageBaseByBaseName(PPS pps, LPCSTR szName)
{
  DWORD dwSize = 0;
  LPVOID *pDevices = ((void*)0);
  LPVOID pResult = ((void*)0);

  if(psEnumDeviceDrivers(pps, ((void*)0), 0, &dwSize) && (dwSize > 0))
  {
    pDevices = (LPVOID*)malloc(dwSize);
    if(pDevices)
    {
      if(psEnumDeviceDrivers(pps, pDevices, dwSize, &dwSize))
      {
        DWORD i = 0;
        DWORD dwNumberOfDrivers;

        dwNumberOfDrivers = dwSize / sizeof(LPVOID);
        while((i < dwNumberOfDrivers) && (((void*)0) == pResult))
        {
          char szBaseName[MAX_PATH];

          if(psGetDeviceDriverBaseName(pps, pDevices[i], szBaseName, sizeof(szBaseName)))
          {
            if(!_stricmp(szBaseName,szName))
            {
              pResult = pDevices[i];
            }
          }
          i++;
        }
      }
      free(pDevices);
    }
  }
  return pResult;
}
